--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -11,11 +11,11 @@
 
 
 
-<footer class="text-center text-white mt-4" style="background-color:black;">
+<footer class="text-center text-dark mt-4" style="background-color: rgb(205, 234, 243);">
   <div class="container-fluid p-4">
       <div class="row">
 
-        <div class="col-lg-6">
+        <div class="col-lg-4">
           <div>
             <iframe
               class="shadow-1-strong rounded"
@@ -26,41 +26,51 @@
           </div>
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-lg-8 " >
           <div class="row mb-2">
-            <div class="col-12 d-inline-flex">
+            <div class="col-12 d-inline-flex" >
               <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
                 <div>
-                  <img src="https://mdbootstrap.com/img/new/fluid/city/113.jpg" style="width:115px"/>
+                  <img src="../../assets/device4.jpg" style="width:115px"/>
                 </div>
               </div>
               <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
                 <div>
-                  <img src="https://mdbootstrap.com/img/new/fluid/city/111.jpg" style="width:115px"/>
+                  <img src="../../assets/ip3.jpg" style="width:115px"/>
                 </div>
               </div>
               <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
                 <div>
-                  <img src="https://mdbootstrap.com/img/new/fluid/city/112.jpg" style="width:115px"/>
+                  <img src="../../assets/lap1.jpg" style="width:115px"/>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+                <div>
+                  <img src="../../assets/device2.jpeg" style="width:115px"/>
                 </div>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-12 d-inline-flex">
-              <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+              <div class="col-lg-2 col-md-12 mb-4 mb-md-0 ">
                 <div>
-                  <img src="https://mdbootstrap.com/img/new/fluid/city/114.jpg" style="width:115px"/>
+                  <img src="../../assets/lap2.jpg" style="width:115px"/>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+              <div class="col-lg-2 col-md-12 mb-4 mb-md-0 ">
                 <div>
-                  <img src="https://mdbootstrap.com/img/new/fluid/city/115.jpg" style="width:115px"/>
+                  <img src="../../assets/device4.jpg" style="width:115px"/>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+              <div class="col-lg-2 col-md-12 mb-4 mb-md-0 ">
                 <div>
-                  <img src="https://mdbootstrap.com/img/new/fluid/city/116.jpg" style="width:115px"/>
+                  <img src="../../assets/ip2.jpg" style="width:115px"/>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-12 mb-4 mb-md-0 ">
+                <div>
+                  <img src="../../assets/cam3.jpg" style="width:115px"/>
                 </div>
               </div>
             </div>
@@ -69,8 +79,8 @@
       </div>
   </div>
 
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+  <div class="text-center p-3 text-dark" >
     © 2020 Copyright:
-    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    <a class="text-dark" href="https://mdbootstrap.com/">mobile store.com</a>
   </div>
 </footer>
