--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -37,7 +37,7 @@
 
 
  sticky-top -->
- <div class="container-fluid bg-light py-4">
+ <div class="container-fluid  py-2">
   <div class="row">
     <div class="col-6">
       <div class="d-flex mr-auto">
@@ -61,7 +61,7 @@
   </div>
 </div>
 
-<nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top border border-right-0 border border-left-0 border border-bottom-0 px-4 py-4">
+<nav class="navbar navbar-expand-sm  m-0 p-0  sticky-top border border-right-0 border border-left-0 border border-bottom-0 px- py-1" style="background-color: rgb(205, 234, 243);">
       <div class="col-4">
         <a class="navbar-brand text-primary text-dark " href="#"  ><h3>GAAK Store</h3></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
