--- a/src/app/Components/addproduct/addproduct.component.html
+++ b/src/app/Components/addproduct/addproduct.component.html
@@ -2,26 +2,26 @@
     <div class="row mt-5 mb-5  justify-content-center">
       <div class="col-8">
           <!-- <button class="btn btn-primary" (click)="add()">Add</button> -->
-  
-  
-  <form #myfrom="ngForm" (ngSubmit)="add()">
+
+
+  <form (ngSubmit)="add()">
     <!-- {{myfrom.invalid}} -->
-   
+
 
 
     <div class="form-group">
         <label for="">Name</label>
-        <input #prdName="ngModel" type="text" [(ngModel)]="prd.PRDName" class="form-control" name="pName" required minlength="3">
+        <input  type="text" [(ngModel)]="prd.PRDName" class="form-control" name="pName" required minlength="3">
     </div>
     <div class="form-group">
         <label for="">Price</label>
-        <input #prdPrice="ngModel" type="number" [(ngModel)]="prd.PRDPrice" class="form-control" name="pPrice" required min="1">
-  
+        <input  type="number" [(ngModel)]="prd.PRDPrice" class="form-control" name="pPrice" required min="1">
+
     </div>
-  
+
     <div class="form-group">
       <label for="">Select  Category</label>
-        <select #sel  class=" form-control btn btn-primary" style=" background-color: wheat;
+        <select   class=" form-control btn btn-primary" style=" background-color: wheat;
              margin-top: -10px;"  name="category" id="cars" class="form-control"
               [(ngModel)]="prd.PRDCategory" >
               <option *ngFor="let cat of categoryArray;"  [value]="cat.CATName" >
@@ -29,37 +29,37 @@
               </option>
             </select>
     </div>
-  
+
 
     <div class="form-group">
       <label for="">Add Category</label>
-      <input #prdName="ngModel" type="text" [(ngModel)]="addcat" class="form-control" name="Catname" >
+      <input  type="text" [(ngModel)]="addcat" class="form-control" name="Catname" >
   </div>
- 
-  
+
+
     <div class="form-group">
         <label for="">Description</label>
         <textarea class="form-control" [(ngModel)]="prd.PRDDesc" name="pDescription" rows="3" required minlength="10"></textarea>
     </div>
-  
+
     <!-- img hint---------------------------------***** -->
     <!-- <div class="form-group">
         <label for="">image</label>
         <input #prdimg="ngModel" type="file" (change)="processFile($event)" [(ngModel)]="prd.PRDImage" class="form-control" name="image" required >
     </div> -->
-  
+
     <div class="form-group">
         <label for="">cost</label>
-        <input #prdcost="ngModel" type="number" [(ngModel)]="prd.PRDCost" class="form-control" name="pPrice" required >
+        <input  type="number" [(ngModel)]="prd.PRDCost" class="form-control" name="pPrice" required >
     </div>
-  
+
     <div class="form-group">
         <label for="">discound</label>
-        <input #prdcost="ngModel" type="number" [(ngModel)]="prd.PRDDiscountPrice" class="form-control" name="pPrice" required >
+        <input  type="number" [(ngModel)]="prd.PRDDiscountPrice" class="form-control" name="pPrice" required >
     </div>
     <div class="form-group">
       <label for="">Quantity</label>
-      <input #prdcost="ngModel" type="number" [(ngModel)]="prd.PRDQuantity" class="form-control" name="pPrice" required >
+      <input  type="number" [(ngModel)]="prd.PRDQuantity" class="form-control" name="pPrice" required >
 
 
       <div class="form-group">
@@ -69,88 +69,9 @@
 
 
 
-<div class="container-fluid">
-  <div class="row mt-5 mb-5  justify-content-center">
-    <div class="col-8">
-        <!-- <button class="btn btn-primary" (click)="add()">Add</button> -->
 
 
 
-  <!-- {{myfrom.invalid}} -->
-  <div class="form-group">
-      <label for="">Name</label>
-      <input #prdName="ngModel" type="text" [(ngModel)]="prd.PRDName" class="form-control" name="pName" required minlength="3">
-  </div>
-  <div class="form-group">
-      <label for="">Price</label>
-      <input #prdPrice="ngModel" type="number" [(ngModel)]="prd.PRDPrice" class="form-control" name="pPrice" required min="1">
-
-  </div>
-
-  <div class="form-group">
-      <select #sel  class=" form-control btn btn-primary" style=" background-color: wheat;
-           margin-top: -10px;"  name="category" id="cars" class="form-control"
-            [(ngModel)]="prd.PRDCategory" >
-            <option *ngFor="let cat of categoryArray;"  [value]="cat.CATName" >
-             {{cat.CATName}}
-            </option>
-          </select>
-  </div>
-
-
-
-  <div class="form-group">
-      <label for="">Description</label>
-      <textarea class="form-control" [(ngModel)]="prd.PRDDesc" name="pDescription" rows="3" required minlength="10"></textarea>
-  </div>
-
-  <!-- img hint---------------------------------***** -->
-  <!-- <div class="form-group">
-      <label for="">image</label>
-      <input #prdimg="ngModel" type="file" (change)="processFile($event)" [(ngModel)]="prd.PRDImage" class="form-control" name="image" required >
-  </div> -->
-
-  <div class="form-group">
-      <label for="">cost</label>
-      <input #prdcost="ngModel" type="number" [(ngModel)]="prd.PRDCost" class="form-control" name="pPrice" required >
-  </div>
-
-
-    
-  
-
-  
-  
-  
-  <img *ngFor="let url of urls" [src]="url" height="100">
-  
-  
-      </div>
-  
-  
-
-  <div class="form-group">
-    <label for="">Quantity</label>
-    <input #prdcost="ngModel" type="number" [(ngModel)]="prd.PRDQuantity" class="form-control" name="pPrice" required >
-</div>
-<div class="form-group">
-  <label for="">image</label>
-<input type="file" multiple (change)="onselect($event)">
-</div>
-
-  <button type="submit" class="btn btn-primary" >Save</button>
-
-
-
-<img *ngFor="let url of urls" [src]="url" height="100">
-
-
-
-    </div>
-  
-  </div>
-  
-  
   <button type="submit" class="btn btn-primary" >Save</button>
 
 </div>
