--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -1,7 +1,7 @@
 
 
   <div class="container-fluid">
-    <div class="row mt-3">
+    <div class="row">
       <div class="col-md-12">
         <div id="demo" class="carousel slide" data-ride="carousel">
           <ul class="carousel-indicators">
@@ -11,14 +11,14 @@
             <li data-target="#demo" data-slide-to="3"></li>
             <li data-target="#demo" data-slide-to="4"></li>
           </ul>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
+          <div class="carousel-inner p-0 m-0">
+            <div class="carousel-item active p-0 m-0 " style="height: 700px;">
               <img
                 src="assets/device 5.jpg"
                 alt="device 5"
                 class="img-responsive"
                 width="100%"
-                height="320px"
+                height="100%"
               />
               <div class="carousel-caption">
                 <div>
@@ -28,23 +28,23 @@
                 <!-- <p>We had such a great time in LA!</p> -->
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item p-0 m-0" style="height: 700px;">
               <img
                 src="assets/device3.jpeg"
                 alt="device3"
                 class="img-responsive"
                 width="100%"
-                height="320px"
+                height="100%"
               />
               <div class="carousel-caption"></div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" style="height: 700px;">
               <img
                 src="assets/device4.jpg"
                 alt="device4"
                 class="img-responsive"
                 width="100%"
-                height="320px"
+                height="100%"
               />
               <div class="carousel-caption">
                 <!-- <a href="#" class="primary-btn">Shop Now</a> -->
@@ -54,13 +54,13 @@
                 <!-- <p>We love the Big Apple!</p> -->
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" style="height: 700px;">
               <img
                 src="assets/camera_category.jpg"
                 alt="device1"
                 class="img-responsive"
                 width="100%"
-                height="320px"
+                height="100%"
               />
               <div class="carousel-caption">
                 <div>
@@ -72,13 +72,13 @@
                 </div>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" style="height: 700px;">
               <img
                 src="assets/device2.jpeg"
                 alt="device2"
                 class="img-responsive"
                 width="100%"
-                height="320px"
+                height="100%"
               />
               <div class="carousel-caption">
                 <div class="container">
@@ -115,9 +115,66 @@
 
   <div class="container">
 
+<!-- search -->
+<!-- search -->
+<div class="row mt-3">
+
+  <div class="col-lg-3 col-md-3 col-xl-3 mt-3">
+    <div class="input-group mb-3 col-12">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">price</span>
+      </div>
+      <input
+        type="number"
+        class="form-control"
+        placeholder="prdprice"
+        aria-label="prdprice"
+        [(ngModel)]="prdprice"
+        aria-describedby="basic-addon1"
+      />
+    </div>
+  </div>
+  <div class="col-lg-3 col-md-3 col-xl-3 mt-3">
+    <div class="input-group mb-3 w-100 col-12">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Name</span>
+      </div>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="prodName"
+        aria-label="prodName"
+        [(ngModel)]="prodName"
+        aria-describedby="basic-addon2"
+      />
+    </div>
+  </div>
+
+  <!-- search -->
+  <div class="col-lg-3 col-md-3 col-xl-3 mt-4">
+    <select
+    #sel
+    class="form-control btn btn-primary col-12"
+    style="background-color: wheat; margin-top: -10px"
+    name="category"
+    id="cars"
+    class="form-control"
+    [(ngModel)]="SelectedCategory">
+    <option *ngFor="let cat of categoryArray" [value]="cat.CATName">
+      {{ cat.CATName }}
+    </option>
+  </select>
+  </div>
+  <div class="col-lg-3 col-md-3 col-xl-3 mt-2">
+    <button class="btn btn-warning mt-2 " style="width: 100px;" (click)="onSave()">Search</button>
+  </div>
+</div>
+<!-- end serach -->
+
+<!-- items -->
   <div class="row mt-3">
     <div class="col-lg-3 col-md-3 col-xl-3 " *ngFor="let item of data  | paginate: {
-       itemsPerPage: 4,
+       itemsPerPage: 12,
        currentPage: page,
        totalItems:totalLength
       }
