--- a/src/app/Components/productdetails/productdetails.component.html
+++ b/src/app/Components/productdetails/productdetails.component.html
@@ -3,7 +3,7 @@
     <div class="col-12">
       <div class="mt-2 mb-4 pt-2 pl-2 bg-dark">
         <h1 class="font-weight-bolder text-white text-center">
-          Micro USB to Type-C Adapter 3pcs
+          {{item.PRDName}}
         </h1>
       </div>
       <div>
@@ -15,7 +15,7 @@
         >
         <li class="nav-link font-weight-bold text-white d-flex">
           <strong class="mx-auto" style="font-size: 25px">
-            Micro USB to Type-C Adapter 3pcs
+            {{item.PRDDesc}}
           </strong>
         </li>
       </div>
@@ -67,7 +67,7 @@
 
       <div class="form-group d-inline-flex mr-4 border-muted">
           <button class="form-control border-light btn" (click)="subproduct()"><i class="fa fa-minus text-muted" style=" font-size:12px"></i></button>
-          <input  type="text" [(ngModel)]="add" class="form-control border-light text-center input-btn">
+          <input  type="text" [(ngModel)]="add" class="form-control border-light text-center input-btn" readonly>
           <button class="form-control border-light btn" (click)="addincrement(item.PRDQuantity)"><i class="fa fa-plus text-muted" style="font-size:12px"></i></button>
       </div>
       <button class="btn-danger btn-card" (click)="addtocard(item.id)">
