add favorite items to customers

--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -189,6 +189,7 @@
             <a  (click)="addtocard(item.id)" [hidden]="this.check_is_staff"><i class="fa fa-cart-plus"></i></a>
 
             <a [routerLink]="['/product' ,item.id]"><i class="fa fa-search" ></i></a>
+            <a (click)="favoriteItem(item.id)" [hidden]="this.check_is_staff"><i class="fa fa-heart"></i></a>
           </div>
           </div>
         </div>
