--- a/src/app/Components/userprofile/userprofile.component.html
+++ b/src/app/Components/userprofile/userprofile.component.html
@@ -70,7 +70,7 @@
                                     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false" [hidden]="!this.loginUser.is_staff">Timeline</a>
+                                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false" >Timeline</a>
                                 </li>
                             </ul>
                         </div>
@@ -140,6 +140,10 @@
                             </div>
                             <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                               <div class="row mt-3">
+                                <h5 class="text-success ml-3" [hidden]="this.check_is_staff">favorite Items</h5>
+                              </div>
+
+                              <div class="row mt-3">
                                 <div class="col-lg-6 col-md-6 col-xl-6 " *ngFor="let item of data">
                                   <div class="card mt-2 mb-2 first">
                                     <div  class="product-item  p-0"  >
@@ -164,13 +168,14 @@
                                              {{ item.PRDPrice| currency }}
                                           </h5>
                                           <h5>
-                                            <!-- <a [routerLink]="['/product', item.id]">{{ item.PRDName }}</a> -->
+                                            <!-- <a [routerLink]="['/product', item.id]">[hidden]="this.check_is_staff"{{ item.PRDName }}</a> -->
                                           </h5>
                                         </div>
                                       </div>
                                       <p>{{ item.PRDDesc }}</p>
                                       <a class="btn info m-1" [routerLink]="['/product' ,item.id]">details</a>
-                                      <a class="btn danger m-1 " [routerLink]="['/edit' ,item.id]">Edit</a>
+                                      <a class="btn danger m-1 " [hidden]="!this.check_is_staff" [routerLink]="['/edit' ,item.id]">Edit</a>
+                                      <a class="btn danger m-1 " [hidden]="this.check_is_staff" (click)="deletFavoriteItem(item.id)">delete</a>
 
                                     </div>
                                   </div>
